--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -36,6 +36,11 @@
 					<div class="twelve columns bloglist">
 						<ul>
 							<li>
+								<a href="t6-js-language.html">Javascript Language</a>
+								<p>Date 1 April 2016</p>
+							</li>
+							
+							<li>
 								<a href="c5-self-confidence.html">Self-Awareness</a>
 								<p>Date 27 March 2016</p>
 							</li>
