--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -36,6 +36,11 @@
 					<div class="twelve columns bloglist">
 						<ul>
 							<li>
+								<a href="c7-motivation.html">Motivation</a>
+								<p>Date 7 April 2016</p>
+							</li>
+
+							<li>
 								<a href="c6-control.html">Self Control</a>
 								<p>Date 1 April 2016</p>
 							</li>
